@@ -53,9 +53,10 @@ User visible changes
   + Fix OS:FILE-INFO on files with corrupt times (bug#3144993).
   + Remove LINUX:wait and LINUX:waitpid because they cannot work since
     CLISP ignores SIGCHLD during normal operation; use POSIX:WAIT
-    instead (bug#3224360).
+    with a new macro POSIX:WITH-SUBPROCESSES instead (bug#3224360).
   + Make wrong keyword argument a STYLE-WARNING in the presence of
     :ALLOW-OTHER-KEYS T (bug#3198722).
+  + Fix LOOP mixing WITH & Hash Table FOR (bug#3165405).
 
 
 2.49 (2010-07-07)
