@@ -1,3 +1,7 @@
+2011-03-28  Sam Steingold  <sds@gnu.org>
+
+	* loop.tst: fix bug#3165405: loop mixing WITH & FOR
+
 2011-03-24  Sam Steingold  <sds@gnu.org>
 
 	* macro8.tst: fix bug#3198722: arg warnings despite :ALLOW-OTHER-KEYS T
